submitted update to chrome store

--- a/1.0_0/_locales/en/messages.json
+++ b/1.0_0/_locales/en/messages.json
@@ -1,7 +1,7 @@
 {
    "extDesc": {
       "description": "The description of the extension, displayed in the web store.",
-      "message": "New tabs become a notepad"
+      "message": "Turn your new tabs into a personal notebook!"
    },
    "extName": {
       "description": "The title of the extension, displayed in the web store.",
